Bug 1683309: Added direct searching of CPAN
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@195 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/list.html.tmpl
+++ b/data/templates/default/list.html.tmpl
@@ -250,11 +250,12 @@
 					<td><input type="button" value="Search" onclick="search(true);"/></td>
 				</tr>
 				<tr>
-					<td colspan="3" style="vertical-align: middle; text-align: center;">
+					<td colspan="3" style="vertical-align: middle; text-align: center; font-size: 0.8em;">
 						<div id="advanced">
 							<input type="checkbox" id="type_names"     name="type" value="modules" checked="checked" /><label>Modules</label>&nbsp;&nbsp;
 							<input type="checkbox" id="type_pod"       name="type" value="pod"      /><label>POD</label>&nbsp;&nbsp;
 							<input type="checkbox" id="type_functions" name="type" value="functions"/><label>Functions</label>&nbsp;&nbsp;
+							<input type="checkbox" id="type_cpan"      name="type" value="functions"/><label>CPAN</label>&nbsp;&nbsp;
 						</div>
 					</td>
 				</tr>
