Bug 1685524: Added anchor tags where subs and =head are found in the code, and links from the pod to those lines
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@198 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/code.html.tmpl
+++ b/data/templates/default/code.html.tmpl
@@ -3,7 +3,7 @@
 	<div id="code">
 		<pre>
 			[%- FOR line = lines %]
-[% line -%]
+<a name="line[% line.line_no %]" class="line_no"> [% line.line_no %] </a>[% IF line.ext_link %]<a name="[% line.ext_link %]"></a>[% END %] [% line.code -%]
 			[%- END -%]
 		</pre>
 	</div>
