--- a/data/templates/default/cpan.css.tmpl
+++ b/data/templates/default/cpan.css.tmpl
@@ -34,7 +34,16 @@ h1 div.up {
 	height:             16px;
 	width:              16px;
 	display:            inline;
-	font-size:          smaller
+	font-size:          smaller;
+}
+h1 a.code,
+h2 a.code,
+h3 a.code,
+h4 a.code {
+	border:             1px solid;
+	height:             16px;
+	width:              16px;
+	font-size:          smaller;
 }
 h2 {
 	font-size:          medium;
