--- a/data/templates/default/css.css.tmpl
+++ b/data/templates/default/css.css.tmpl
@@ -24,6 +24,12 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 h1 a div.up {
 	display:            none;
 }
+h1 a.code,
+h2 a.code,
+h3 a.code,
+h4 a.code {
+	display:            none;
+}
 h1 {
 	padding-left:       4px;
 }
