--- a/data/templates/default/module_head.html.tmpl
+++ b/data/templates/default/module_head.html.tmpl
@@ -45,6 +45,7 @@
 				next.style.display    = 'block';
 				current_file = select.options[index].value;
 			}
+			window.parent.menu.click_module('[% module.substr(0,1) %]__[% location %]__[% module.replace(':','_') %]');
 		//-->
 		</script>
 	</head>
