--- a/data/templates/default/list.js.tmpl
+++ b/data/templates/default/list.js.tmpl
@@ -1,3 +1,4 @@
+[% PROCESS strings.tmpl -%]
 [% UNLESS history_size %][% history_size = 10 %][% END -%]
 /** @file    list.js
  *  @brief   Javascript for displaying/creating the module lists
