--- a/data/templates/default/module.html.tmpl
+++ b/data/templates/default/module.html.tmpl
@@ -1,3 +1,4 @@
+[% PROCESS strings.tmpl -%]
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Frameset//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-frameset.dtd">
@@ -11,7 +12,7 @@
 		<meta name="description" content="" />
 		<meta name="keywords"    content="" />
 		<style type="text/css">
-			
+
 		</style>
 	</head>
 	<frameset rows="45,*">
