--- a/data/templates/default/frames.html.tmpl
+++ b/data/templates/default/frames.html.tmpl
@@ -1,3 +1,4 @@
+[% PROCESS strings.tmpl -%]
 [% UNLESS animation %][% animation = 60000 %][% END -%]
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Frameset//EN"
