--- a/data/templates/default/list.html.tmpl
+++ b/data/templates/default/list.html.tmpl
@@ -1,3 +1,4 @@
+[% PROCESS strings.tmpl -%]
 [% UNLESS history_size %][% history_size = 10 %][% END -%]
 [% UNLESS animation %][% animation = 60000 %][% END -%]
 <?xml version="1.0" encoding="utf-8"?>
