Bug 1695376: Fixed bookmark this page link, put more string into variables
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@209 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/frames.html.tmpl
+++ b/data/templates/default/frames.html.tmpl
@@ -41,6 +41,6 @@
 	</head>
 	<frameset cols="255,*" onload=" setTimeout( title, [% animation %] ); ">
 		<frame name="menu" src="?page=list"></frame>
-		<frame name="main" src="?page=pod&amp;module=[% module %]"></frame>
+		<frame name="main" src="?page=pod&amp;module=[% module %][% IF location %]&location=[% location %][% END %][% IF file %]&file=[% file %][% END %][% IF source %]&source=[% source %][% END %]"></frame>
 	</frameset>
 </html>
