--- a/data/templates/default/strings.tmpl
+++ b/data/templates/default/strings.tmpl
@@ -21,4 +21,8 @@
 [% str_head_api            = 'API' %]
 [% str_head_code           = 'CODE' %]
 
-
+[% # Javascript strings %]
+[% str_list_show           = 'Show' %]
+[% str_list_hide           = 'Hide' %]
+[% str_section_show        = 'Show' %]
+[% str_section_hide        = 'Hide' %]
